v10/docs/ModelsOrchestratorJobsJobTypeFieldRequest.md
# ModelsOrchestratorJobsJobTypeFieldRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Name** | **string** |  | 
**Type** | **int64** |  | 
**DefaultValue** | Pointer to **string** |  | [optional] 
**Required** | Pointer to **bool** |  | [optional] 

## Methods

### NewModelsOrchestratorJobsJobTypeFieldRequest

`func NewModelsOrchestratorJobsJobTypeFieldRequest(name string, type_ int64, ) *ModelsOrchestratorJobsJobTypeFieldRequest`

NewModelsOrchestratorJobsJobTypeFieldRequest instantiates a new ModelsOrchestratorJobsJobTypeFieldRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsOrchestratorJobsJobTypeFieldRequestWithDefaults

`func NewModelsOrchestratorJobsJobTypeFieldRequestWithDefaults() *ModelsOrchestratorJobsJobTypeFieldRequest`

NewModelsOrchestratorJobsJobTypeFieldRequestWithDefaults instantiates a new ModelsOrchestratorJobsJobTypeFieldRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetName

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) SetName(v string)`

SetName sets Name field to given value.


### GetType

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) GetType() int64`

GetType returns the Type field if non-nil, zero value otherwise.

### GetTypeOk

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) GetTypeOk() (*int64, bool)`

GetTypeOk returns a tuple with the Type field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetType

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) SetType(v int64)`

SetType sets Type field to given value.


### GetDefaultValue

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) GetDefaultValue() string`

GetDefaultValue returns the DefaultValue field if non-nil, zero value otherwise.

### GetDefaultValueOk

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) GetDefaultValueOk() (*string, bool)`

GetDefaultValueOk returns a tuple with the DefaultValue field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDefaultValue

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) SetDefaultValue(v string)`

SetDefaultValue sets DefaultValue field to given value.

### HasDefaultValue

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) HasDefaultValue() bool`

HasDefaultValue returns a boolean if a field has been set.

### GetRequired

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) GetRequired() bool`

GetRequired returns the Required field if non-nil, zero value otherwise.

### GetRequiredOk

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) GetRequiredOk() (*bool, bool)`

GetRequiredOk returns a tuple with the Required field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRequired

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) SetRequired(v bool)`

SetRequired sets Required field to given value.

### HasRequired

`func (o *ModelsOrchestratorJobsJobTypeFieldRequest) HasRequired() bool`

HasRequired returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


